# bazel-playground

./: .bazelrc  .editorconfig  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  dependencies.yaml  package.json  tsconfig-test.json  tsconfig.json
android/src/main/: AndroidManifest.xml  BUILD  proguard-rules.pro
android/src/main/kotlin/com/fp/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
android/src/main/kotlin/com/fp/res/layout/: activity_main.xml
android/src/main/kotlin/com/fp/res/values/: strings.xml
api/: BUILD
api/src/main/scala/com/fp/: BUILD.bazel  Foo.scala
api/src/test/scala/com/fp/: BUILD  BazTest.scala
api_proto/: BUILD  BUILD.bazel  hello.proto
api_proto/deep/: BUILD  bye.proto
protobus/: BUILD.bazel  long.ts  protobuf.spec.ts  protobuf.ts  protobus.spec.ts  protobus.ts  tsconfig.json
protobus/benchmark/: suite.ts
protobus/binary/: BUILD.bazel  integral.spec.ts  integral.ts  oneof.spec.ts  oneof.ts  repeated.spec.ts  repeated.ts
protobus/compat/: BUILD.bazel  long.spec.ts  long.ts
protobus/language/: BUILD.bazel  schema.ts  types.ts
todo/: App.tsx  BUILD.bazel  Button.tsx  Main.tsx  index.html  require.config.js
todo/devserver/: BUILD.bazel  export-styled-components.js  require.config.js
todo/theme/: BUILD.bazel  index.ts
tools/: grpc_web.bzl  scala_rules.bzl
tools/grpc_web/: BUILD.bazel  defs.bzl  package.json  run_wrap_amd.js
tools/intellij/: as.bazelproject  ij.bazelproject
tools/javascript/: BUILD  run_wrap_amd.js
tools/webpack/: BUILD.bazel  package.json  webpack.config.tmpl.js  webpack_bundle.bzl
web/e2e/: BUILD  BUILD.bazel
web/e2e/src/: app.e2e-spec.ts
web/src/: BUILD  BUILD.bazel  index.html  main.ts  require-test.config.js  require.config.js
web/src/app/: app.component.html  app.component.spec.ts  app.component.ts
