load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_devserver")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "protobus",
    srcs = glob(["*.ts"], exclude = ["*.spec.ts"]),
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"]
)

ts_library(
    name = "protobus_test",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":protobus",
        "@npm//@types/jasmine"
    ],
    tsconfig = "//:tsconfig-test.json"
)

jasmine_node_test(
    name = "test",
    deps = [
        "@npm//jasmine",
        ":protobus_test"
    ]
)
