load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_devserver")
load("@build_bazel_rules_nodejs//:defs.bzl", "history_server")
load("@build_bazel_rules_nodejs//internal/web_package:web_package.bzl", "web_package")
load("//tools/webpack:webpack_bundle.bzl", "webpack_bundle")

exports_files([
    "index.html"
])

ts_library(
    name = "app",
    srcs = glob(["*.ts", "*.tsx"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@types/react-router-dom",
        "//todo/theme"
    ],
    visibility = ["//visibility:public"]
)

webpack_bundle(
    name = "bundle",
    entry_point = "todo/Main",
    deps = [
        "//todo:app",
        "@npm//react",
        "@npm//react-dom",
        "@npm//react-router-dom",
        "@npm//styled-components",
    ]
)

web_package(
    name = "prodapp",
    # Do not sort
    assets = [":bundle.min.js"],
    data = [":bundle"],
    index_html = "index.html"
)

history_server(
    name = "prodserver",
    data = [":prodapp"],
    templated_args = ["todo/prodapp"]
)
