load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "binary",
    srcs = glob(["*.ts"], exclude = ["*.spec.ts"]),
    deps = [
        "//protobus/language"
    ],
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"]
)

ts_library(
    name = "binary_test",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":binary",
        "//protobus/language",
        "@npm//@types/jasmine"
    ],
    tsconfig = "//:tsconfig-test.json"
)

jasmine_node_test(
    name = "test",
    deps = [
        "@npm//jasmine",
        ":binary_test"
    ]
)
