load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "compat",
    srcs = glob(["*.ts"], exclude = ["*.spec.ts"]),
    deps = [
        "//protobus/language"
    ],
    tsconfig = "//:tsconfig.json",
    visibility = ["//visibility:public"]
)

ts_library(
    name = "compat_test",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":compat",
        "@npm//@types/jasmine"
    ],
    tsconfig = "//:tsconfig-test.json"
)

jasmine_node_test(
    name = "test",
    deps = [
        "@npm//jasmine",
        ":compat_test"
    ]
)
