# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2.0

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//tools/webpack:__subpackages__"])

exports_files([
    "webpack.config.tmpl.js",

    # Exported to be consumed for generating skydoc.
    "webpack_bundle.bzl",
])

nodejs_binary(
    name = "webpack-cli",
    entry_point = "webpack_deps/node_modules/webpack-cli/bin/cli.js",
    node_modules = "@webpack_deps//:node_modules",
    visibility = ["//visibility:public"],
)
